--- a/index.html
+++ b/index.html
@@ -216,7 +216,192 @@
         });
 
         function updateCharts() {
-            const data = JSON.parse(localStorage.getItem('usageData')) || [];
+            const data = [
+    { date: '2023-12-11', gas: 2850, electricity: 124 },
+    { date: '2023-12-12', gas: 2863, electricity: 140 },
+    { date: '2023-12-13', gas: 2873, electricity: 165 },
+    { date: '2023-12-14', gas: 2885, electricity: 177 },
+    { date: '2023-12-16', gas: 2912, electricity: 219 },
+    { date: '2023-12-17', gas: 2922, electricity: 230 },
+    { date: '2023-12-18', gas: 2933, electricity: 254 },
+    { date: '2023-12-19', gas: 2939, electricity: 270 },
+    { date: '2023-12-20', gas: 2950, electricity: 280 },
+    { date: '2023-12-21', gas: 2966, electricity: 298 },
+    { date: '2023-12-22', gas: 2979, electricity: 316 },
+    { date: '2023-12-23', gas: 2993, electricity: 348 },
+    { date: '2023-12-24', gas: 3008, electricity: 389 },
+    { date: '2023-12-26', gas: 3019, electricity: 444 },
+    { date: '2023-12-27', gas: 3030, electricity: 463 },
+    { date: '2023-12-28', gas: 3041, electricity: 485 },
+    { date: '2023-12-29', gas: 3051, electricity: 508 },
+    { date: '2024-01-01', gas: 3073, electricity: 547 },
+    { date: '2024-01-02', gas: 3087, electricity: 565 },
+    { date: '2024-01-03', gas: 3100, electricity: 586 },
+    { date: '2024-01-04', gas: 3111, electricity: 602 },
+    { date: '2024-01-05', gas: 3124, electricity: 624 },
+    { date: '2024-01-06', gas: 3136, electricity: 642 },
+    { date: '2024-01-07', gas: 3155, electricity: 672 },
+    { date: '2024-01-08', gas: 3171, electricity: 692 },
+    { date: '2024-01-09', gas: 3189, electricity: 710 },
+    { date: '2024-01-10', gas: 3207, electricity: 735 },
+    { date: '2024-01-11', gas: 3224, electricity: 754 },
+    { date: '2024-01-13', gas: 3253, electricity: 802 },
+    { date: '2024-01-14', gas: 3268, electricity: 823 },
+    { date: '2024-01-15', gas: 3278, electricity: 845 },
+    { date: '2024-01-16', gas: 3291, electricity: 866 },
+    { date: '2024-01-17', gas: 3301, electricity: 884 },
+    { date: '2024-01-18', gas: 3318, electricity: 907 },
+    { date: '2024-01-19', gas: 3329, electricity: 926 },
+    { date: '2024-01-20', gas: 3344, electricity: 953 },
+    { date: '2024-01-21', gas: 3354, electricity: 953 },
+    { date: '2024-01-22', gas: 3367, electricity: 991 },
+    { date: '2024-01-23', gas: 3381, electricity: 1009 },
+    { date: '2024-01-24', gas: 3394, electricity: 1028 },
+    { date: '2024-01-25', gas: 3409, electricity: 1048 },
+    { date: '2024-01-26', gas: 3419, electricity: 1076 },
+    { date: '2024-01-28', gas: 3445, electricity: 1126 },
+    { date: '2024-01-29', gas: 3452, electricity: 1141 },
+    { date: '2024-01-31', gas: 3473, electricity: 1176 },
+    { date: '2024-02-01', gas: 3482, electricity: 1197 },
+    { date: '2024-02-04', gas: 3485, electricity: 1221 },
+    { date: '2024-02-06', gas: 3485, electricity: 1234 },
+    { date: '2024-02-07', gas: 3502, electricity: 1245 },
+    { date: '2024-02-10', gas: 3535, electricity: 1271 },
+    { date: '2024-02-11', gas: 3557, electricity: 1297 },
+    { date: '2024-02-12', gas: 3567, electricity: 1312 },
+    { date: '2024-02-13', gas: 3575, electricity: 1331 },
+    { date: '2024-02-14', gas: 3583, electricity: 1350 },
+    { date: '2024-02-15', gas: 3590, electricity: 1365 },
+    { date: '2024-02-16', gas: 3594, electricity: 1376 },
+    { date: '2024-02-18', gas: 3599, electricity: 1394 },
+    { date: '2024-02-19', gas: 3610, electricity: 1407 },
+    { date: '2024-02-21', gas: 3631, electricity: 1437 },
+    { date: '2024-02-22', gas: 3638, electricity: 1453 },
+    { date: '2024-02-23', gas: 3643, electricity: 1473 },
+    { date: '2024-02-24', gas: 3651, electricity: 1485 },
+    { date: '2024-02-25', gas: 3656, electricity: 1502 },
+    { date: '2024-02-26', gas: 3663, electricity: 1521 },
+    { date: '2024-02-27', gas: 3667, electricity: 1534 },
+    { date: '2024-02-28', gas: 3675, electricity: 1552 },
+    { date: '2024-02-29', gas: 3679, electricity: 1564 },
+    { date: '2024-03-01', gas: 3682, electricity: 1579 },
+    { date: '2024-03-02', gas: 3687, electricity: 1599 },
+    { date: '2024-03-03', gas: 3691, electricity: 1617 },
+    { date: '2024-03-04', gas: 3696, electricity: 1634 },
+    { date: '2024-03-05', gas: 3702, electricity: 1651 },
+    { date: '2024-03-06', gas: 3712, electricity: 1672 },
+    { date: '2024-03-07', gas: 3718, electricity: 1684 },
+    { date: '2024-03-10', gas: 3737, electricity: 1724 },
+    { date: '2024-03-11', gas: 3742, electricity: 1738 },
+    { date: '2024-03-12', gas: 3750, electricity: 1752 },
+    { date: '2024-03-13', gas: 3753, electricity: 1768 },
+    { date: '2024-03-14', gas: 3759, electricity: 1785 },
+    { date: '2024-03-15', gas: 3768, electricity: 1809 },
+    { date: '2024-03-16', gas: 3770, electricity: 1818 },
+    { date: '2024-03-17', gas: 3778, electricity: 1843 },
+    { date: '2024-03-18', gas: 3785, electricity: 1856 },
+    { date: '2024-03-19', gas: 3791, electricity: 1870 },
+    { date: '2024-03-21', gas: 3807, electricity: 1899 },
+    { date: '2024-03-24', gas: 3827, electricity: 1956 },
+    { date: '2024-03-25', gas: 3834, electricity: 1971 },
+    { date: '2024-03-26', gas: 3839, electricity: 1991 },
+    { date: '2024-03-27', gas: 3845, electricity: 2009 },
+    { date: '2024-03-28', gas: 3849, electricity: 2025 },
+    { date: '2024-03-30', gas: 3859, electricity: 2081 },
+    { date: '2024-03-31', gas: 3863, electricity: 2116 },
+    { date: '2024-04-01', gas: 3867, electricity: 2133 },
+    { date: '2024-04-02', gas: 3871, electricity: 2152 },
+    { date: '2024-04-03', gas: 3874, electricity: 2169 },
+    { date: '2024-04-04', gas: 3879, electricity: 2184 },
+    { date: '2024-04-05', gas: 3882, electricity: 2200 },
+    { date: '2024-04-06', gas: 3886, electricity: 2230 },
+    { date: '2024-04-07', gas: 3889, electricity: 2247 },
+    { date: '2024-04-08', gas: 3891, electricity: 2261 },
+    { date: '2024-04-09', gas: 3893, electricity: 2274 },
+    { date: '2024-04-10', gas: 3896, electricity: 2289 },
+    { date: '2024-04-11', gas: 3898, electricity: 2302 },
+    { date: '2024-04-15', gas: 3911, electricity: 2353 },
+    { date: '2024-04-16', gas: 3915, electricity: 2374 },
+    { date: '2024-04-17', gas: 3921, electricity: 2387 },
+    { date: '2024-04-18', gas: 3928, electricity: 2405 },
+    { date: '2024-04-19', gas: 3936, electricity: 2429 },
+    { date: '2024-04-20', gas: 3941, electricity: 2446 },
+    { date: '2024-04-21', gas: 3948, electricity: 2474 },
+    { date: '2024-04-22', gas: 3953, electricity: 2490 },
+    { date: '2024-04-23', gas: 3959, electricity: 2507 },
+    { date: '2024-04-24', gas: 3965, electricity: 2521 },
+    { date: '2024-04-25', gas: 3970, electricity: 2538 },
+    { date: '2024-04-28', gas: 3980, electricity: 2573 },
+    { date: '2024-05-03', gas: 3986, electricity: 2621 },
+    { date: '2024-05-05', gas: 3991, electricity: 2638 },
+    { date: '2024-05-06', gas: 3994, electricity: 2658 },
+    { date: '2024-05-07', gas: 3997, electricity: 2667 },
+    { date: '2024-05-08', gas: 4000, electricity: 2683 },
+    { date: '2024-05-09', gas: 4004, electricity: 2701 },
+    { date: '2024-05-10', gas: 4006, electricity: 2718 },
+    { date: '2024-05-12', gas: 4006, electricity: 2725 },
+    { date: '2024-05-13', gas: 4009, electricity: 2737 },
+    { date: '2024-05-14', gas: 4012, electricity: 2750 },
+    { date: '2024-05-15', gas: 4015, electricity: 2761 },
+    { date: '2024-05-21', gas: 4030, electricity: 2852 },
+    { date: '2024-05-22', gas: 4033, electricity: 2865 },
+    { date: '2024-05-23', gas: 4035, electricity: 2875 },
+    { date: '2024-05-26', gas: 4040, electricity: 2904 },
+    { date: '2024-05-27', gas: 4044, electricity: 2923 },
+    { date: '2024-05-28', gas: 4047, electricity: 2936 },
+    { date: '2024-05-29', gas: 4050, electricity: 2953 },
+    { date: '2024-06-02', gas: 4051, electricity: 2987 },
+    { date: '2024-06-03', gas: 4053, electricity: 3002 },
+    { date: '2024-06-04', gas: 4056, electricity: 3017 },
+    { date: '2024-06-05', gas: 4059, electricity: 3033 },
+    { date: '2024-06-06', gas: 4062, electricity: 3045 },
+    { date: '2024-06-07', gas: 4064, electricity: 3058 },
+    { date: '2024-06-08', gas: 4067, electricity: 3078 },
+    { date: '2024-06-09', gas: 4069, electricity: 3098 },
+    { date: '2024-06-11', gas: 4073, electricity: 3124 },
+    { date: '2024-06-12', gas: 4076, electricity: 3140 },
+    { date: '2024-06-13', gas: 4079, electricity: 3157 },
+    { date: '2024-06-14', gas: 4082, electricity: 3174 },
+    { date: '2024-06-16', gas: 4086, electricity: 3197 },
+    { date: '2024-06-17', gas: 4089, electricity: 3215 },
+    { date: '2024-06-18', gas: 4092, electricity: 3237 },
+    { date: '2024-06-19', gas: 4094, electricity: 3259 },
+    { date: '2024-06-20', gas: 4097, electricity: 3269 },
+    { date: '2024-06-21', gas: 4100, electricity: 3278 },
+    { date: '2024-06-29', gas: 4103, electricity: 3348 },
+    { date: '2024-06-30', gas: 4106, electricity: 3368 },
+    { date: '2024-07-01', gas: 4108, electricity: 3383 },
+    { date: '2024-07-09', gas: 4120, electricity: 3472 },
+    { date: '2024-07-10', gas: 4122, electricity: 3485 },
+    { date: '2024-07-11', gas: 4124, electricity: 3502 },
+    { date: '2024-07-15', gas: 4128, electricity: 3542 },
+    { date: '2024-07-29', gas: 4139, electricity: 3701 },
+    { date: '2024-08-01', gas: 4146, electricity: 3747 },
+    { date: '2024-08-02', gas: 4148, electricity: 3761 },
+    { date: '2024-08-03', gas: 4151, electricity: 3774 },
+    { date: '2024-08-04', gas: 4153, electricity: 3790 },
+    { date: '2024-08-05', gas: 4155, electricity: 3806 },
+    { date: '2024-08-06', gas: 4158, electricity: 3828 },
+    { date: '2024-08-09', gas: 4161, electricity: 3868 },
+    { date: '2024-08-24', gas: 4161, electricity: 3988 },
+    { date: '2024-08-25', gas: 4164, electricity: 4006 },
+    { date: '2024-08-27', gas: 4169, electricity: 4034 },
+    { date: '2024-09-01', gas: 4177, electricity: 4101 },
+    { date: '2024-09-02', gas: 4181, electricity: 4121 },
+    { date: '2024-09-03', gas: 4184, electricity: 4140 },
+    { date: '2024-09-04', gas: 4185, electricity: 4152 },
+    { date: '2024-09-05', gas: 4188, electricity: 4167 },
+    { date: '2024-09-06', gas: 4190, electricity: 4184 },
+    { date: '2024-09-07', gas: 4193, electricity: 4199 },
+    { date: '2024-09-08', gas: 4195, electricity: 4214 },
+    { date: '2024-09-09', gas: 4196, electricity: 4234 },
+    { date: '2024-09-10', gas: 4200, electricity: 4244 },
+    { date: '2024-09-12', gas: 4207, electricity: 4263 },
+    { date: '2024-09-13', gas: 4210, electricity: 4286 },
+    { date: '2024-09-14', gas: 4214, electricity: 4313 },
+    { date: '2024-09-15', gas: 4216, electricity: 4330 }
+           ];
+
             if (data.length === 0) return;
 
             const allDates = Array.from(new Set(data.map(entry => entry.date))).sort();
