--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             color: black;
-            background: url('https://github.com/car0tek/liczniki/blob/main/DJI_0636.JPG') no-repeat center center fixed;
+            background: url('https://github.com/car0tek/liczniki/blob/main/97D0FC7838686322584501E3974E5582.JPEG') no-repeat center center fixed;
             background-size: cover;
             position: relative;
         }
@@ -25,7 +25,7 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.5);
-            z-index: 0;
+            z-index: 1;
         }
 
         .container {
